<resources>
    <string name="app_name">MyAmbulaciaParaMedico</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings relacionados con el login -->
    <string name="cedula_login">Usuario</string>
    <string name="st_olvide_pass">Restablecer Contraseña</string>
    <string name="contraseña">Contraseña</string>
    <string name="registro1">Registro</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Este campo es obligatorio</string>

    <string name="usuario">name usuario</string>
    <string name="Usuario">Usuario</string>


    <!-- Strings Registro -->

    <string name="st_nombres">Nombres</string>
    <string name="st_apellidos">Apellidos</string>
    <string name="st_cedula_registro">Cedula</string>
    <string name="st_correo">Correo</string>
    <string name="st_confirmar_correo">Confirmar Correo</string>
    <string name="st_contraseña">Contraseña</string>
    <string name="st_confirmar_contraseña">Confirmar Contraseña</string>

    <!-- Dialogo Aceptar Emergencia -->
    <string name="st_Si_Aceptar">Si, Aceptar</string>
    <string name="st_No_Volver">No, Volver</string>
    <!-- Menu en mapas -->
    <string name="st_cerrar_sesion">Cerrar Sesion</string>
    <string name="st_dibujar_ruta">Mostrar Ruta</string>
    <string name="st_terminar_servicio">Terminar servicio</string>
    <string name="st_dibujar_ruta_clinica">Ruta a clínica</string>
</resources>
